gap fix

--- a/Badminton.FE/src/app/shared.scss
+++ b/Badminton.FE/src/app/shared.scss
@@ -1,3 +1,9 @@
+.flex-column-8 {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .flex-row-8 {
   display: flex;
   flex-direction: row;
@@ -7,10 +13,6 @@
 .height-100 {
   height: 100%;
 }
-
-//.padding-bottom-8 {
-//  padding-bottom: 8px;
-//}
 
 .mat-mdc-table {
   overflow: auto;
